RESOLVED FIXED225413
Fix missing exception check in objectConstructorGetOwnPropertyDescriptors().
https://bugs.webkit.org/show_bug.cgi?id=225413
Summary Fix missing exception check in objectConstructorGetOwnPropertyDescriptors().
Mark Lam
Reported 2021-05-05 13:41:54 PDT
Need to handle TerminationException. rdar://77551530
Attachments
proposed patch. (1.69 KB, patch)
2021-05-05 13:45 PDT, Mark Lam
no flags
Mark Lam
Comment 1 2021-05-05 13:45:22 PDT
Created attachment 427802 [details] proposed patch.
Michael Saboff
Comment 2 2021-05-05 14:00:42 PDT
Comment on attachment 427802 [details] proposed patch. r=me
Mark Lam
Comment 3 2021-05-06 08:44:35 PDT
Comment on attachment 427802 [details] proposed patch. Thanks for the review. Landing now.
EWS
Comment 4 2021-05-06 08:47:54 PDT
Committed r277092 (237394@main): <https://commits.webkit.org/237394@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 427802 [details].
Note You need to log in before you can comment on or make changes to this bug.