Fix missing exception check in objectConstructorGetOwnPropertyDescriptors(). https://bugs.webkit.org/show_bug.cgi?id=225413 rdar://77551530

Reviewed by Michael Saboff.

Need to handle TerminationException.

* runtime/ObjectConstructor.cpp:
(JSC::objectConstructorGetOwnPropertyDescriptors):


Canonical link: https://commits.webkit.org/237394@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@277092 268f45cc-cd09-0410-ab3c-d52691b4dbfc